BRole tabs wokring

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -124,58 +124,7 @@
           "LeaderExt": false,
           "CommentExt": "testCommentExt",
           "SoglasForm": {},
-          "Guid": [
-            {
-              "Icon": "",
-              "Guid": "",
-              "Soglas": "",
-              "DataFrom": "12.10.2015",
-              "DataTo": "",
-              "GroupR": "",
-              "GroupName": "GroupNametest",
-              "BRole": "",
-              "BRoleName": "",
-              "TypeSoglas": "",
-              "OrgNum": "",
-              "OrgSet": "",
-              "Kokrs": "",
-              "KokrsName": "",
-              "Bukrs": "",
-              "BukrsName": "",
-              "Erkrs": "",
-              "ErkrsName": "",
-              "Kostl": "",
-              "KostlName": "",
-              "Prctr": "",
-              "PrctrName": "",
-              "Werks": "",
-              "WerksName": "",
-              "Lgort": "",
-              "LgortName": "",
-              "Vkorg": "",
-              "VkorgName": "",
-              "Vstel": "",
-              "VstelName": "",
-              "Ekorg": "",
-              "EkorgName": "",
-              "Ekgrp": "",
-              "EkgrpName": "",
-              "Ingrp": "",
-              "IngrpName": "",
-              "Lgnum": "",
-              "LgnumName": "",
-              "Beber": "",
-              "Matkl": "",
-              "MatklName": "",
-              "Biaut": "",
-              "BiautName": "",
-              "Partn": "",
-              "PartnName": "",
-              "UserCopy": "",
-              "LoginSogl": "",
-              "Message": ""
-            }
-          ]
+          "Guid": []
         }
       },
       "VHbukrs": {
